--- a/payment-app/package.json
+++ b/payment-app/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "setel-practice",
+  "name": "setel-practice-payment-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^14.0.6",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
     "eslint": "^7.1.0",
     "typescript": "^3.9.3"
+  },
+  "dependencies": {
+    "fastify": "^2.14.1",
+    "fastify-graphql": "^4.0.1",
+    "fastify-helmet": "^3.0.2",
+    "make-promises-safe": "^5.1.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "prestart": "yarn build",
+    "start": "node ./dist"
   }
 }
