--- a/order-app/package.json
+++ b/order-app/package.json
@@ -12,6 +12,7 @@
     "typescript": "^3.9.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "encoding-down": "^6.3.0",
     "fastify": "^2.14.1",
     "fastify-graphql": "^4.0.1",
