--- a/order-app/package.json
+++ b/order-app/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "setel-practice",
+  "name": "setel-practice-order-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
-    "@types/graphql": "^14.5.0",
     "@types/node": "^14.0.6",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
@@ -15,9 +14,7 @@
     "axios": "^0.19.2",
     "encoding-down": "^6.3.0",
     "fastify": "^2.14.1",
-    "fastify-graphql": "^4.0.1",
     "fastify-helmet": "^3.0.2",
-    "graphql-tools": "^6.0.4",
     "levelup": "^4.4.0",
     "make-promises-safe": "^5.1.0",
     "memdown": "^5.1.0"
