--- a/order-app/package.json
+++ b/order-app/package.json
@@ -17,7 +17,8 @@
     "fastify-helmet": "^3.0.2",
     "levelup": "^4.4.0",
     "make-promises-safe": "^5.1.0",
-    "memdown": "^5.1.0"
+    "memdown": "^5.1.0",
+    "tap": "^14.10.7"
   },
   "scripts": {
     "build": "tsc",
